--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 authors = ["Samuel Resendez <saresend@usc.edu>"]
 
 [dependencies]
-rouille = "0.1.3"
+rouille = "1.0.3"
 diesel = { version = "1.0.0", features = ["sqlite", "chrono"] }
 dotenv = "0.10.1"
 serde = "1.0.27"
 serde_json = "1.0.9"
 serde_derive = "1.0.27"
+rustc-serialize = "0.3.24"
+
